methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:27: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime8.FlowerPot
  setDirection(direction.NORTH)
               ^FlowerPot:33: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime8.FlowerPot
  setDirection(direction.EAST)
               ^FlowerPot:39: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime8.FlowerPot
  setDirection(direction.WEST)
               ^