methods.flowerpot.FlowerPot.scala.code
var flowerPattern:Array[Array[Int]] = Array(
	Array(0, 1, 0),
  Array(1, 0, 1),
  Array(0, 1, 0)
)

var flowerPositions:Array[Array[Int]] = Array(
	Array(2, 2),
  Array(2, 6),
  Array(4, 4),
  Array(6, 2),
  Array(6, 4)
)

def drawFlower(c:Color) {
  for(i <- 0 to 2) {
    for(j <- 0 to 2) {
      
    }
  }
}

def initialPos() {
	var x:Int = getX()
  var y:Int = getY()
  
  setDirection(direction.NORTH)
  
  for(i <- y to 0 by -1) {
    forward()
  }
  
  setDirection(direction.EAST)
  
  for(i <- x to 0 by -1) {
    forward()
  }
  
  setDirection(direction.WEST)
}

def growFlowers() {
  initialPos()
}